@@ -2,46 +2,53 @@ package model.recipe;
 
 import java.io.IOException;
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class MockRecipeModel implements IRecipeModel {
+
+    private final Set<Ingredient> mockIngredients = Set.of(
+            new Ingredient("1", "Chicken", ""),
+            new Ingredient("2", "Rice", "")
+    );
+
+    private final Set<String> mockCategories = Set.of("Main", "Dessert");
+    private final Set<String> mockAreas = Set.of("Italian", "Chinese");
 
     private Set<Ingredient> userIngredients;
     private String userCategory;
     private String userArea;
 
-    private final Ingredient mockIngredient = new Ingredient("202", "Lime", "www.themealdb.com/images/ingredients/lime-medium.png");
+    private final List<Observer> observers = new ArrayList<>();
 
-    private final Meal mockMeal = new Meal(
-            "Chick-Fil-A Sandwich",
-            "https://www.themealdb.com/images/media/meals/sbx7n71587673021.jpg",
-            "53016"
-    );
+    private final Meal meal1 = new Meal("Chicken Stew", "thumb1", "101");
+    private final Meal meal2 = new Meal("Chicken Rice", "thumb2", "102");
+    private final Meal meal3 = new Meal("Pasta", "thumb3", "103");
 
-    private final Recipe mockRecipe = new Recipe(
-            53016,
-            "Chick-Fil-A Sandwich",
-            "Chicken",
-            "American",
-            "Mock instructions",
-            "https://youtube.com/mock",
-            "https://www.themealdb.com/images/media/meals/sbx7n71587673021.jpg",
-            List.of("Lime"),
-            List.of("1 slice")
-    );
+    @Override
+    public void addObserver(Observer observer) {
+        observers.add(observer);
+    }
+
+    @Override
+    public void notifyObservers() {
+        for (Observer observer : observers) {
+            observer.update();
+        }
+    }
 
     @Override
     public Set<Ingredient> getAllIngredients() {
-        return Set.of(mockIngredient);
+        return mockIngredients;
     }
 
     @Override
     public Set<String> getAllCategories() {
-        return Set.of("Chicken", "Beef");
+        return mockCategories;
     }
 
     @Override
     public Set<String> getAllAreas() {
-        return Set.of("American", "British");
+        return mockAreas;
     }
 
     @Override
@@ -50,17 +57,22 @@ public class MockRecipeModel implements IRecipeModel {
         setUserCategory(category);
         setUserArea(area);
 
-        // Return mock meal if Lime is selected
-        if (userIngredients != null && userIngredients.stream().anyMatch(i -> i.nameIngredient().equals("Lime"))) {
-            return Set.of(mockMeal);
-        }
+        List<Set<Meal>> mealSets = new ArrayList<>();
 
-        return Set.of();
+        if (userIngredients != null) mealSets.add(getMealsByIngredient(userIngredients));
+        if (category != null) mealSets.add(getMealsByCategory(category));
+        if (area != null) mealSets.add(getMealsByArea(area));
+
+        return switch (mealSets.size()) {
+            case 0 -> Set.of();
+            case 1 -> mealSets.get(0);
+            default -> findIntersection(mealSets);
+        };
     }
 
     @Override
     public Set<Meal> findIntersection(List<Set<Meal>> mealSets) {
-        if (mealSets.isEmpty()) return Collections.emptySet();
+        if (mealSets.isEmpty()) return Set.of();
         Set<Meal> result = new HashSet<>(mealSets.get(0));
         for (int i = 1; i < mealSets.size(); i++) {
             result.retainAll(mealSets.get(i));
@@ -71,55 +83,66 @@ public class MockRecipeModel implements IRecipeModel {
     @Override
     public void setUserIngredients(Set<Ingredient> userIngredients) {
         this.userIngredients = userIngredients;
+        notifyObservers();
     }
 
     @Override
     public void setUserCategory(String category) {
         this.userCategory = category;
+        notifyObservers();
     }
 
     @Override
     public void setUserArea(String area) {
         this.userArea = area;
+        notifyObservers();
     }
 
     @Override
-    public Set<Meal> getMealsByIngredient(Set<Ingredient> userIngredients) {
-        if (userIngredients.contains(mockIngredient)) {
-            return Set.of(mockMeal);
+    public Set<Meal> getMealsByIngredient(Set<Ingredient> ingredients) {
+        Set<Meal> result = new HashSet<>();
+        for (Ingredient i : ingredients) {
+            if (i.nameIngredient().equals("Chicken")) result.add(meal1);
+            if (i.nameIngredient().equals("Rice")) result.add(meal2);
         }
-        return Set.of();
+        return result;
     }
 
     @Override
     public Set<Meal> getMealsByCategory(String category) {
-        if ("Chicken".equals(category)) {
-            return Set.of(mockMeal);
-        }
-        return Set.of();
+        return switch (category) {
+            case "Main" -> Set.of(meal1, meal3);
+            case "Dessert" -> Set.of();
+            default -> Set.of();
+        };
     }
 
     @Override
     public Set<Meal> getMealsByArea(String area) {
-        if ("American".equals(area)) {
-            return Set.of(mockMeal);
-        }
-        return Set.of();
+        return switch (area) {
+            case "Italian" -> Set.of(meal1, meal3);
+            case "Chinese" -> Set.of(meal2);
+            default -> Set.of();
+        };
     }
 
     @Override
-    public Set<Meal> getMutualMeals(Set<Meal> mealSet1, Set<Meal> mealSet2, Set<Meal> mealSet3) {
-        Set<Meal> intersection = new HashSet<>(mealSet1);
-        intersection.retainAll(mealSet2);
-        intersection.retainAll(mealSet3);
-        return intersection;
+    public Set<Meal> getMutualMeals(Set<Meal> s1, Set<Meal> s2, Set<Meal> s3) {
+        return s1.stream().filter(s2::contains).filter(s3::contains).collect(Collectors.toSet());
     }
 
     @Override
-    public Recipe getRecipeByIdMeal(int idMeal) {
-        if (idMeal == 53016) {
-            return mockRecipe;
-        }
-        return null;
+    public Recipe getRecipeByIdMeal(int idMeal) throws IOException {
+        return new Recipe(
+                idMeal,
+                "Mock Recipe",
+                "Main",
+                "Italian",
+                "Cook it well.",
+                "https://youtube.com/mock",
+                "https://image.com/mock.jpg",
+                List.of("Chicken", "Salt"),
+                List.of("200g", "1 tsp")
+        );
     }
 }
